--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "workqueue",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node main.js",
+    "dev" : "ts-node main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
