--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node main.js",
-    "dev" : "ts-node main.ts",
+    "start": "node /src/main.js",
+    "dev": "ts-node /src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
