--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node /src/main.js",
+    "start": "node main.js",
     "dev": "ts-node /src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
