--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node main.js",
-    "dev": "ts-node /src/main.ts",
+    "start": "node dist/main.js",
+    "dev": "ts-node src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Vedant-Sagwal",
   "license": "ISC",
   "description": "",
   "dependencies": {
