--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "skipLibCheck": true,
+    "esModuleInterop" : true
   },
   "exclude": [
     "node_modules"
