--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,10 @@
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "module": "commonjs",
-    "target": "esnext",
+    "moduleResolution": "node",
+    "target": "es2022",
     "lib": [
-      "esnext"
+      "es2022"
     ],
     "types": [
       "node"
@@ -36,7 +37,8 @@
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "skipLibCheck": true,
-    "esModuleInterop" : true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "node_modules"
